--- a/Getting_started_Flux.ipynb
+++ b/Getting_started_Flux.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# An introduction to Deep Learning using Flux Part I: A simple linear regression example\n",
+    "# Getting started using Flux\n",
     "\n",
     "\n",
     "[Flux](https://fluxml.ai/) is a Deep Learning library written entirely in [Julia](https://julialang.org/). Flux's website states that it makes the easy things easy while remaining fully hackable. This makes Flux an ideal library to get started in Deep Learning because you can look under the hood and see how algorithms are implemented. Also, some members of the community say that in the future, Julia might have a more predominant role in Machine Learning (see [The Future of Machine Learning and why it looks a lot like Julia](https://towardsdatascience.com/the-future-of-machine-learning-and-why-it-looks-a-lot-like-julia-a0e26b51f6a6)).\n",
